<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/m2"
    tools:context="com.example.lenovo.dbapp2.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText21"
        android:layout_marginTop="83dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:autoText="false"
        android:hint="@string/enter_name_file_contents" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:id="@+id/editText22"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/enter_rollno_file_name" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_int"
        android:id="@+id/button21"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="viewFile" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_int"
        android:id="@+id/button22"
        android:onClick="saveFile"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_ext"
        android:id="@+id/button24"
        android:onClick="saveexFile"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_pref"
        android:id="@+id/button31"
        android:onClick="save_sharedPref"
        android:layout_above="@+id/button21"
        android:layout_alignEnd="@+id/button4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_pref"
        android:id="@+id/button6"
        android:onClick="view_sharedPref"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/textView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:id="@+id/button"
        android:layout_below="@+id/editText21"
        android:onClick="addData"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/button4"
        android:onClick="onupdbutClick"
        android:layout_below="@+id/editText21"
        android:layout_toEndOf="@+id/button21" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/button3"
        android:onClick="ondelbutClick"
        android:layout_above="@+id/textView"
        android:layout_toStartOf="@+id/button2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/button2"
        android:onClick="displayData"
        android:layout_above="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/editText22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView5"
        android:layout_above="@+id/button31"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView6"
        android:layout_above="@+id/button31"
        android:layout_toEndOf="@+id/button31" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/editText22"
        android:layout_toStartOf="@+id/button24"
        android:layout_alignEnd="@+id/editText21" />

</RelativeLayout>
